k8s/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: auth-app

  labels:
    istio-injection: enabled
