k8s/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication

metadata:
  name: default
  namespace: auth-app

spec:
  mtls:
    mode: STRICT
