k8s/backend-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  namespace: auth-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend
      version: v2

  template:
    metadata:
      labels:
        app: backend
        version: v2

    spec:
      containers:
      - name: backend
        image: auth-backend:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 8080
