k8s/frontend-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: frontend
#   namespace: auth-app
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: frontend
#   template:
#     metadata:
#       labels:
#         app: frontend
#     spec:
#       containers:
#       - name: frontend
#         image: auth-frontend:latest
#         imagePullPolicy: Never
#         ports:
#         - containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend
#   namespace: auth-app
# spec:
#   selector:
#     app: frontend
#   ports:
#   - port: 80
#     targetPort: 80


apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1

  template:
    metadata:
      labels:
        app: frontend
        version: v1

    spec:
      containers:
      - name: frontend
        image: auth-frontend:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: auth-app

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80
