k8s/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway

metadata:
  name: auth-gateway
  namespace: auth-app

spec:
  selector:
    istio: ingressgateway

  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP

    hosts:
    - "*"
